Compact card working

--- a/src/components/App.module.css
+++ b/src/components/App.module.css
@@ -11,6 +11,7 @@
   font-style: normal;
   font-weight: 500;
 
+  /* fonts */
   --unit: 4px;
   --unit-1: 4px;
   --unit-2: 8px;
@@ -37,4 +38,63 @@
   --unit-23: 92px;
   --unit-24: 96px;
   --unit-half: 2px;
+
+  /* colors */
+  --background: #f3f0f7;
+
+  --primary: #cc0fe0;
+  --primary-dark-1: #b80eca;
+  --primary-dark-2: #a30cb3;
+  --primary-light-1: #d127e3;
+  --primary-light-2: #d63fe6;
+
+  --secondary: #7e1bcc;
+  --secondary-transparent: rgba(126, 27, 204, 0.85);
+  --secondary-dark-1: #7118b8;
+  --secondary-dark-2: #6516a3;
+  --secondary-light-1: #8b32d1;
+  --secondary-light-2: #9849d6;
+
+  --neutral: #858199;
+  --neutral-dark-1: #78748a;
+  --neutral-dark-2: #6a677a;
+  --neutral-dark-3: #4d535a;
+  --neutral-light-1: #9d9aad;
+  --neutral-light-2: #aaa7b8;
+  --neutral-light-3: #b6b3c2;
+  --neutral-light-4: #c2c0cc;
+  --neutral-light-5: #cecdd6;
+  --neutral-light-6: #dad9e0;
+  --neutral-light-7: #e7e6eb;
+  --neutral-light-8: #f2f2f4;
+  --neutral-light-9: #f7f7f9;
+  --neutral-light-10: #fcfcfc;
+  --white: #ffffff;
+
+  --accent-red: #d0021b;
+  --accent-red-dark-1: #aa0115;
+  --accent-red-light-1: #d51b32;
+
+  --accent-green: #0ba400;
+  --accent-green-dark-1: #0a9400;
+  --accent-green-light-1: #23ad1a;
+
+  --accent-orange: #ff9400;
+  --accent-orange-dark-1: #f28100;
+  --accent-orange-light-1: #ffa70f;
+
+  --accent-purple: #8e51cf;
+
+  --primary-gradient: linear-gradient(135deg, #ee00ed 0%, #c514e0 100%);
+  --primary-gradient-alt-1: linear-gradient(135deg, #d63fe6 0%, #a30cb3 100%);
+  --secondary-gradient: linear-gradient(315deg, #6b0fb3 0%, #7e1bcc 100%);
+  --page-header-gradient: linear-gradient(-22deg, #5b23e1 0%, #a22feb 100%);
+  --accent-red-gradient: linear-gradient(
+    315deg,
+    var(--accent-red-dark-1) 0%,
+    var(--accent-red-light-1) 100%
+  );
+
+  --scrubber-hover: var(--primary-gradient);
+  --play-button-fill: #ffffff;
 }
