--- a/src/components/track/TrackPlayerCard.module.css
+++ b/src/components/track/TrackPlayerCard.module.css
@@ -1,10 +1,40 @@
 .container {
+  border-radius: 16px;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  padding: 24px;
+  /* TODO remove these to make it responsive */
+  width: 400px;
+  height: 480px;
 }
 
 .bottomSection {
   display: flex;
   align-items: center;
+  margin-top: 16px;
+}
+
+.artworkStyle {
+  /* Cool hack to make it preserve aspect ratio
+   * https://stackoverflow.com/questions/5445491/height-equal-to-dynamic-width-css-fluid-layout
+   */
+  width: 100%;
+  height: 0;
+  padding-bottom: 100%;
+  margin: 0px;
+}
+
+.scrubber {
+  margin-top: 22px;
+}
+
+.playButton {
+  height: 48px;
+  width: 48px;
+  border-radius: 24px;
+  margin-right: 16px;
+}
+
+.shareWrapper {
+  margin-left: auto;
 }
