--- a/src/components/App.module.css
+++ b/src/components/App.module.css
@@ -5,6 +5,13 @@
   src: url("../assets/fonts/AvenirNextLTPro-Medium.ttf") format("truetype");
 }
 
+@font-face {
+  font-family: "Gilroy";
+  font-style: normal;
+  font-weight: 700;
+  src: url("../assets/fonts/Gilroy-Bold.otf") format("opentype");
+}
+
 .app {
   color: white;
   font-family: "Avenir Next LT Pro";
