--- a/src/components/pausedpopover/PausedPopoverCard.module.css
+++ b/src/components/pausedpopover/PausedPopoverCard.module.css
@@ -1,5 +1,4 @@
 .container {
-  border-radius: 12px;
   background-color: rgba(255, 255, 255, 0.9);
   backdrop-filter: blur(4px);
   position: absolute;
@@ -34,4 +33,13 @@
 
 .label {
   margin-bottom: 16px;
+}
+
+.compactLabel {
+  margin-top: 18px;
+  margin-bottom: 12px;
+}
+
+.compactLabelFont {
+  font-size: 20px;
 }
