--- a/src/components/button/Button.module.css
+++ b/src/components/button/Button.module.css
@@ -2,12 +2,20 @@
   display: flex;
   transition: all 0.76 ease-in-out;
   transform: scale(1, 1);
+  cursor: pointer;
+  justify-content: center;
+  align-items: center;
 }
 
-.container:hover {
+.container:not(.disabled):hover {
   transform: scale(1.05, 1.05);
 }
 
 .container:active {
   transform: scale(0.9, 0.9);
+}
+
+.disabled {
+  opacity: 0.7;
+  cursor: auto;
 }
