--- a/src/components/deleted/DeletedContent.module.css
+++ b/src/components/deleted/DeletedContent.module.css
@@ -21,6 +21,7 @@
 
 .logo {
     background-size: contain !important;
+    background-repeat: no-repeat !important;
     height: 52px;
     width: 192px;
 }
