--- a/src/components/pausedpopover/PausePopover.module.css
+++ b/src/components/pausedpopover/PausePopover.module.css
@@ -1,7 +1,7 @@
 .container {
-  background-color: rgba(255, 255, 255, 0.9);
+  background-color: rgba(255, 255, 255, 0.95);
   backdrop-filter: blur(4px);
-  position: absolute;
+  position: fixed;
   display: flex;
   top: 0;
   right: 0;
@@ -14,6 +14,7 @@
 
 .logo {
   margin: 24px 0px 30px;
+  cursor: pointer;
 }
 
 .artwork {
@@ -27,8 +28,21 @@
 
 .dismissIcon {
   position: absolute;
-  top: 25px;
-  left: 25px;
+  top: 12px;
+  left: 12px;
+  opacity: 0.5;
+  transform: scale(1);
+  transiton: all 0.25s ease-out;
+  cursor: pointer;
+}
+
+.dismissIcon:hover {
+  opacity: 0.3;
+  transform: scale(1.05);
+}
+
+.dismissIcon:active {
+  transform: scale(0.98);
 }
 
 .label {
