More fixes, spacebar to play, generic card wrapper

--- a/src/components/App.module.css
+++ b/src/components/App.module.css
@@ -125,7 +125,7 @@ body {
 .twitter {
     margin: 24px;
     height: calc(100vh - 48px);
-    width: calc(100vh - 48px);
+    width: calc(100vw - 48px);
     overflow: visible;
 }
 
