--- a/src/components/titles/Titles.module.css
+++ b/src/components/titles/Titles.module.css
@@ -2,10 +2,13 @@
   display: flex;
   flex-direction: column;
   cursor: pointer;
+  min-width: 0;
 }
 
-
 .title {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
   font-size: 18px;
 }
 
@@ -15,8 +18,11 @@
 
 .artistName {
   font-size: 15px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
   display: flex;
   align-items: center;
+  overflow: hidden;
 }
 
 .artistName:hover {
