--- a/src/components/playbutton/PlayButton.module.css
+++ b/src/components/playbutton/PlayButton.module.css
@@ -1,5 +1,5 @@
 .container {
-  background-color: white;
+  background-color: none;
   height: 40px;
   width: 40px;
   border-radius: 40px;
@@ -12,6 +12,10 @@
   cursor: pointer;
 }
 
+.container.isBuffering {
+  background-color: #FFFFFF;
+}
+
 .container:hover {
   transform: scale(1.07);
 }
@@ -20,7 +24,16 @@
   transform: scale(0.98);
 }
 
-.container path {
+.container svg {
+  height: 100%;
+  width: 100%;
+}
+
+.container svg path {
+  fill: #FFFFFF;
+}
+
+.container.isBuffering svg path {
   fill: var(--play-button-fill);
 }
 
