--- a/src/components/card/Card.module.css
+++ b/src/components/card/Card.module.css
@@ -9,9 +9,13 @@
 
 
 .twitterContainer {
-    flex: 0.14;
+    flex: 0.13;
     border-bottom-left-radius: 12px;
     border-bottom-right-radius: 12px;
     overflow: hidden;
+    transition: all 0.6s ease-in-out;
 }
 
+.twitterContainer:hover {
+    flex: 0.15;
+}
