Fixed spinner not working on chrome

--- a/src/components/spinner/Spinner.module.css
+++ b/src/components/spinner/Spinner.module.css
@@ -4,7 +4,12 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    overflow: visible;
+    overflow: hidden;
+}
+
+.container svg {
+    height: 100%;
+    width: 100%;
 }
 
 @keyframes spin {
