--- a/src/components/loading/Loading.module.css
+++ b/src/components/loading/Loading.module.css
@@ -1,11 +1,14 @@
 .container {
     display: flex;
-    height: 100%;
-    width: 100%;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
     justify-content: center;
     align-items: center;
     opacity: 0;
-    transition: all 0.5s ease-in-out;
+    transition: opacity 0.5s ease-in-out;
 }
 
 .didLoad {
