--- a/src/components/spinner/Spinner.module.css
+++ b/src/components/spinner/Spinner.module.css
@@ -4,7 +4,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    overflow: hidden;
+    overflow: visible;
 }
 
 .container svg {
