Fixes for track art, not using padding 100% trick any longer

--- a/src/components/pausedpopover/PausePopover.module.css
+++ b/src/components/pausedpopover/PausePopover.module.css
@@ -11,6 +11,7 @@
   align-items: center;
   z-index: 1;
   justify-content: space-evenly;
+  padding: 0px 16px;
 }
 
 .logo {
@@ -28,7 +29,7 @@
   left: 12px;
   opacity: 0.5;
   transform: scale(1);
-  transiton: all 0.25s ease-out;
+  transition: all 0.25s ease-out;
   cursor: pointer;
 }
 
