--- a/src/components/collection/CollectionPlayerCard.module.css
+++ b/src/components/collection/CollectionPlayerCard.module.css
@@ -127,6 +127,16 @@
   opacity: 0.7;
 }
 
+.rowSubtitle svg {
+  width: 8px;
+  height: 8px;
+  margin-left: 6px;
+}
+
+.rowSubtitle path {
+  fill: #ffffff;
+}
+
 .artwork {
   height: 80px;
   width: 80px;
