--- a/src/components/pausedpopover/ListenOnAudiusCTA.module.css
+++ b/src/components/pausedpopover/ListenOnAudiusCTA.module.css
@@ -4,8 +4,8 @@
   box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.25);
   border-radius: 8px;
   height: 48px;
-  width: 304px;
   align-items: center;
+  padding: 0px 24px;
   justify-content: center;
   font-family: "Gilroy";
   font-size: 18px;
