--- a/src/components/track/TrackPlayerCard.module.css
+++ b/src/components/track/TrackPlayerCard.module.css
@@ -4,12 +4,23 @@
   min-height: 0;
   display: flex;
   flex-direction: column;
+
+  /* The artwork may initially load with height zero,
+     so to avoid flickering, make sure the bottom stuff
+     stays at the bottom with justify-content: flex-end.
+  */
+  justify-content: flex-end;
 }
 
 .bottomSection {
   display: flex;
   align-items: center;
   margin-top: 12px;
+}
+
+.titlesWrapper {
+  margin-right: 8px;
+  min-width: 0;
 }
 
 .artworkWrapper {
@@ -25,13 +36,14 @@
 }
 
 .artworkStyle {
-  /* Cool hack to make it preserve aspect ratio
-   * https://stackoverflow.com/questions/5445491/height-equal-to-dynamic-width-css-fluid-layout
-   */
-  width: 100%;
-  height: 0;
-  padding-bottom: 100%;
   margin: 0px;
+  width: 100%;
+  height: 100%;
+}
+
+.artworkContainer {
+  width: 100%;
+  height: 100%;
 }
 
 .scrubber {
