--- a/src/components/twitterfooter/TwitterFooter.module.css
+++ b/src/components/twitterfooter/TwitterFooter.module.css
@@ -13,6 +13,15 @@
     cursor: pointer;
 }
 
+.container > div {
+    transition: all 0.6s ease-in-out;
+    transform: scale(1);
+}
+
+.container:hover > div {
+    transform: scale(1.05);
+}
+
 .logo {
     height: 36px;
     width: 136px;
