--- a/src/components/pausedpopover/PauseTransitions.module.css
+++ b/src/components/pausedpopover/PauseTransitions.module.css
@@ -1,18 +1,17 @@
 .enter {
   opacity: 0;
-  transition: opacity 0.25s ease-in;
+  transition: opacity 0.3s ease-in;
 }
 
-.enter > div > div {
-  transform: scale(0.6);
-  transition: all 0.6s cubic-bezier(0.05, 0.9, 0.18, 1);
-}
-
-.enterActive {
+.enterActive, .enterDone {
   opacity: 1;
 }
 
-.enterActive > div > div {
+.enter > div {
+  transform: scale(0.65);
+}
+
+.enterActive > div, .enterDone > div {
   transform: scale(1);
 }
 
@@ -21,6 +20,14 @@
   opacity: 1;
 }
 
-.exitActive {
+.exitActive, .exitDone {
   opacity: 0;
+}
+
+.exitActive > div {
+  transform: scale(1);
+}
+
+.exitDone > div {
+  transform: scale(0.65);
 }
