--- a/src/components/toast/Toast.module.css
+++ b/src/components/toast/Toast.module.css
@@ -1,5 +1,4 @@
 .container {
-  z-index: 100;
   display: inline-flex;
   justify-content: center;
   border-radius: 8px;
@@ -13,9 +12,9 @@
   min-width: 268px;
 
   color: #ffffff;
-  font-size: 18px;
   /* Need to add the correct font weight (600) */
   font-weight: bold;
   text-align: center;
-  z-index: 100;
+  height: 20px;
+  transform: translateY(-60px) scaleY(1.2);
 }
