--- a/src/components/track/TrackPlayerCompact.module.css
+++ b/src/components/track/TrackPlayerCompact.module.css
@@ -22,6 +22,7 @@
   display: flex;
   align-items: center;
   margin-top: 20px;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 .bottomSection {
