--- a/src/components/button/Button.module.css
+++ b/src/components/button/Button.module.css
@@ -1,21 +1,22 @@
 .container {
   display: flex;
-  transition: all 0.25s ease-out;
-  transform: scale(1, 1);
+  transition: all 0.14s ease-out;
+  transform: scale(1);
   cursor: pointer;
   justify-content: center;
   align-items: center;
 }
 
-.container:not(.disabled):hover {
-  transform: scale(1.03, 1.03);
+.container:hover {
+  transform: scale(1.03);
 }
 
 .container:active {
-  transform: scale(0.95, 0.95);
+  transform: scale(0.95);
 }
 
 .disabled {
   opacity: 0.7;
   cursor: auto;
+  transform: scale(1) !important;
 }
