--- a/src/components/button/ShareButton.module.css
+++ b/src/components/button/ShareButton.module.css
@@ -3,9 +3,9 @@
 }
 
 .container:hover {
-  transform: scale(1.2) !important;
+  transform: scale(1.2);
 }
 
 .container:active {
-  transform: scale(0.9) !important;
+  transform: scale(0.9);
 }
