--- a/src/components/deleted/DeletedContentTiny.module.css
+++ b/src/components/deleted/DeletedContentTiny.module.css
@@ -1,3 +1,8 @@
+.wrapper {
+  position: relative;
+  width: 100%;
+}
+
 .container {
   display: flex;
   align-items: center;
@@ -14,11 +19,14 @@
 }
 
 .playButton {
+  position: absolute;
   cursor: default;
   pointer-events: none;
-  margin-left: 2px;
-  height: 16px;
-  width: 16px;
+  height: 20px;
+  width: 20px;
+  padding: 1px;
+  box-shadow: none;
+  box-sizing: border-box;
 }
 
 .playButton path {
@@ -28,10 +36,11 @@
 .info {
   font-style: normal;
   font-weight: bold;
-  font-size: 11px;
+  font-size: 14px;
   line-height: 20px;
   vertical-align: bottom;
   height: 20px;
+  margin-left: 24px;
   display: flex;
   align-items: center;
   letter-spacing: 0.01em;
