--- a/src/components/collectibles/CollectibleDetailsView.module.css
+++ b/src/components/collectibles/CollectibleDetailsView.module.css
@@ -103,8 +103,8 @@
 
 .volumeIcon {
   position: absolute;
-  top: 0.5rem;
-  left: 0.5rem;
+  right: 0.75rem;
+  bottom: 1rem;
   height: 1.25rem;
   width: 1.25rem;
   padding: 0.25rem;
