--- a/src/components/collectibles/CollectibleTile.module.css
+++ b/src/components/collectibles/CollectibleTile.module.css
@@ -1,3 +1,9 @@
+.imgContainer {
+    position: relative;
+    padding-bottom: 100%;
+}
+
+/* 1px added to height and width to remove white space showing up */
 .imageWrapper {
     display: flex;
     align-items: center;
@@ -8,14 +14,16 @@
     background-repeat: no-repeat;
     overflow: hidden;
     position: absolute;
-    height: 100%;
-    width: 100%;
+    height: calc(100% + 1px);
+    width: calc(100% + 1px);
     transition: 0.15s ease-in-out;
+    backface-visibility: hidden;
+    opacity: 0;
 }
 .imageWrapper:hover {
     z-index: 2;
     cursor: pointer;
-    transform: perspective(1px) scale3d(1.0625, 1.0625, 1.0625);
+    transform: perspective(1px) scale3d(1.08, 1.08, 1.08);
 }
 
 .video {
@@ -24,10 +32,11 @@
     width: 100%;
 }
 
+/* 10px added to height and width to clip border radius on certain nfts */
 .image {
     position: absolute;
-    width: 100%;
-    height: 100%;
+    height: calc(100% + 10px);
+    width: calc(100% + 10px);
     object-fit: cover;
 }
 
