[AUD-1109] Fix collectibles gallery scrolling when the details modal is open

--- a/src/components/collectibles/CollectibleGallery.module.css
+++ b/src/components/collectibles/CollectibleGallery.module.css
@@ -10,6 +10,10 @@
     height: 100%;
 }
 
+.container.noScroll {
+    overflow: hidden;
+}
+
 .collectiblesContainer {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
