--- a/src/components/track/TrackPlayerTiny.module.css
+++ b/src/components/track/TrackPlayerTiny.module.css
@@ -74,6 +74,7 @@
   letter-spacing: 0.01em;
   color: var(--neutral);
   white-space: nowrap;
+  margin: 0;
   margin-left: 24px;
 
   display: inline-block;
